Revert "spotlessApply & npx prettier"
This reverts commit 829031fd8d3ac5e24060ba01583fd999f15c1beb.